# libVRMx

./: LICENSE  README.md  meson.build
data/: frag.glsl  meson.build  vert.glsl
examples/: meson.build  simple.cpp
examples/simple_viewer/: meson.build  simple-viewer.cpp
examples/simple_viewer/shaders/: shader.frag  shader.vert
src/: meson.build  vrmx-exception.h  vrmx-io.cpp  vrmx-io.h  vrmx-types.h  vrmx.cpp  vrmx.h
subprojects/: magic_enum.wrap  tinygltf.wrap
subprojects/packagefiles/tinygltf/: meson.build
